# RobotGo

./: .flake8  .gitattributes  .gitignore  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
robotgo/algorythm/: __init__.py  a_node.py  a_star.py  algorythm.py
robotgo/api_servers/: client.py  server.py
robotgo/services/robot_services/: __init__.py  moving.py
robotgo/static/: proto_files_utils.py
robotgo/static/proto_files/: __init__.py  test.proto  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py
tests/: conftest.py  test_a_star.py  test_algorythm.py
