[tool.poetry]
name = "robotgo"
version = "0.1.0"
description = ""
authors = ["Viacheslav Grebnev <viacheslavgrebnev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
